Archive2/42/2772c519682488/output
In file included from /usr/local/include/c++/4.9.0/cassert:43:0,
                 from main.cpp:2:
main.cpp: In function 'int main()':
main.cpp:6:12: error: 'get_pointer_safety' is not a member of 'std'
     assert(std::get_pointer_safety() == std::pointer_safety::relaxed);
            ^
main.cpp:6:46: error: 'std::pointer_safety' has not been declared
     assert(std::get_pointer_safety() == std::pointer_safety::relaxed);
                                              ^
