Archive2/42/2772c519682488/main.cpp
#include <memory>
#include <cassert>

int main()
{
    assert(std::get_pointer_safety() == std::pointer_safety::relaxed);
}